--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,8 @@ h1 {
 .fullViewport {
 	position: relative;
 	height: 100%;
-	width: 100%;
+	width: 100%;	
+	background: linear-gradient(to right, rgba(255,255,0,0.15) 0%,rgba(247,148,30,0) 50%, rgba(0,174,239,0.15) 100%), linear-gradient(to top, rgba(255,255,0,0.3) 0%,rgba(247,148,30,0) 50%, rgba(0,174,239,0.15) 100%), url('../assets/pattern.png');
 }
 .center {
 	position: absolute;
